Change layout of developers

--- a/developers.html
+++ b/developers.html
@@ -129,6 +129,15 @@
         box-shadow: 0 2px 8px rgba(84,28,28,0.15);
         transition: box-shadow 0.2s;
     }
+
+    /* .row1 {
+        display: flex;
+        justify-content: space-evenly;
+    }  */
+
+    /* .row1-card {
+
+    } */
   
 </style>
 </head>
@@ -154,80 +163,84 @@
     <section class="team-section container">
         <h1 class="mb-5  fw-semibold text-center" style="font-size:2.5rem; color: #c2c2c2;">Meet Our Developer Team</h1>
         <div class="row g-4 justify-content-center">
-            <!-- Team Member 1-->
-            <div class="col-md-4 col-sm-6">
-                <div class="team-card text-center">
-                    <img src="assets/img/developers/1.jpg" alt="Janidu Senarathna">
-                    <h5 class="fw-bold">Janidu Senarathna</h5>
-                    <p><b>Frontend Developer</b><br>System Administrator</p>
-                    <div class="team-icons">
-                        <!--<a href="#"><i class="bi bi-globe"></i></a> -->
-                        <a href="https://github.com/janidu157"><i class="bi bi-github"></i></a>
-                        <!--<a href="#"><i class="bi bi-linkedin"></i></a> -->
-                        <a href="https://www.facebook.com/share/1HUu33UpcL/"><i class="bi bi-facebook"></i></a>
-                        <a href="mailto:janidusenarathna157@gmail.com"><i class="bi bi-envelope"></i></a>
+            <div class="row justify-content-evenly">
+                <!-- Team Member 2-->
+                <div class="col-md-5 col-sm-6 ">
+                    <div class="team-card text-center">
+                        <img src="assets/img/developers/2.jpeg" alt="Jane Smith">
+                        <h5 class="fw-bold">Lahiru Sathsara</h5>
+                        <p><b>FullStack Developer</b><br>System Administrator</p>
+                        <div class="team-icons">
+                            <a href="https://propix.work.gd/"><i class="bi bi-globe"></i></a>
+                            <a href="https://github.com/propixlk"><i class="bi bi-github"></i></a>
+                            <a href="https://www.linkedin.com/in/lahiru-sathsara"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.facebook.com/share/16muPmLM6q/"><i class="bi bi-facebook"></i></a>
+                            <a href="mailto:lwijayamal2@gmail.com"><i class="bi bi-envelope"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Team Member 3-->
+                <div class="col-md-5 col-sm-6">
+                    <div class="team-card text-center">
+                        <img src="assets/img/developers/3.jpg" alt="KVMSANDEEPA">
+                        <h5 class="fw-bold">Malith Sandeepa</h5>
+                        <p><b>FullStack Developer</b><br>System Administrator</p>
+                        <div class="team-icons">
+                            <a href="https://malithsandeepa.42web.io"><i class="bi bi-globe"></i></a>
+                            <a href="https://github.com/KVMSANDEEPA"><i class="bi bi-github"></i></a>
+                            <a href="https://www.linkedin.com/in/malith-sandeepa/"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.facebook.com/malith.sandeepa.328017/"><i class="bi bi-facebook"></i></a>
+                            <a href="mailto:malithsandeepa1081@gmail.com"><i class="bi bi-envelope"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- Team Member 2-->
-            <div class="col-md-4 col-sm-6">
-                <div class="team-card text-center">
-                    <img src="assets/img/developers/2.jpeg" alt="Jane Smith">
-                    <h5 class="fw-bold">Lahiru Sathsara</h5>
-                    <p><b>Frontend Developer</b><br>System Administrator</p>
-                    <div class="team-icons">
-                        <a href="https://propix.work.gd/"><i class="bi bi-globe"></i></a>
-                        <a href="https://github.com/propixlk"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/lahiru-sathsara"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.facebook.com/share/16muPmLM6q/"><i class="bi bi-facebook"></i></a>
-                        <a href="mailto:lwijayamal2@gmail.com"><i class="bi bi-envelope"></i></a>
+            <!-- <div class="row row2"> -->
+                <!-- Team Member 1-->
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-card text-center">
+                        <img src="assets/img/developers/1.jpg" alt="Janidu Senarathna">
+                        <h5 class="fw-bold">Janidu Senarathna</h5>
+                        <p><b>Frontend Developer</b><br>System Administrator</p>
+                        <div class="team-icons">
+                            <!--<a href="#"><i class="bi bi-globe"></i></a> -->
+                            <a href="https://github.com/janidu157"><i class="bi bi-github"></i></a>
+                            <!--<a href="#"><i class="bi bi-linkedin"></i></a> -->
+                            <a href="https://www.facebook.com/share/1HUu33UpcL/"><i class="bi bi-facebook"></i></a>
+                            <a href="mailto:janidusenarathna157@gmail.com"><i class="bi bi-envelope"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Team Member 3-->
-            <div class="col-md-4 col-sm-6">
-                <div class="team-card text-center">
-                    <img src="assets/img/developers/3.jpg" alt="KVMSANDEEPA">
-                    <h5 class="fw-bold">Malith Sandeepa</h5>
-                    <p><b>Frontend Developer</b><br>System Administrator</p>
-                    <div class="team-icons">
-                        <a href="https://malithsandeepa.42web.io"><i class="bi bi-globe"></i></a>
-                        <a href="https://github.com/KVMSANDEEPA"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/malith-sandeepa/"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.facebook.com/malith.sandeepa.328017/"><i class="bi bi-facebook"></i></a>
-                        <a href="mailto:malithsandeepa1081@gmail.com"><i class="bi bi-envelope"></i></a>
+                <!-- Team Member 4-->
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-card text-center">
+                        <img src="assets/img/developers/4.jpg" alt="RAndika Subash">
+                        <h5 class="fw-bold">Randika Subash</h5>
+                        <p><b>Frontend Developer</b><br>System Administrator</p>
+                        <div class="team-icons">
+                            <a href="https://networkchukka.github.io/site/"><i class="bi bi-globe"></i></a>
+                            <a href="https://github.com/networkchukka"><i class="bi bi-github"></i></a>
+                            <a href="https://www.linkedin.com/in/randikasubash"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.facebook.com/randikasubash1015"><i class="bi bi-facebook"></i></a>
+                            <a href="mailto:randikaudaynga90@gmail.com"><i class="bi bi-envelope"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Team Member 4-->
-            <div class="col-md-4 col-sm-6">
-                <div class="team-card text-center">
-                    <img src="assets/img/developers/4.jpg" alt="RAndika Subash">
-                    <h5 class="fw-bold">Randika Subash</h5>
-                    <p><b>Frontend Developer</b><br>System Administrator</p>
-                    <div class="team-icons">
-                        <a href="https://networkchukka.github.io/site/"><i class="bi bi-globe"></i></a>
-                        <a href="https://github.com/networkchukka"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/randikasubash"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.facebook.com/randikasubash1015"><i class="bi bi-facebook"></i></a>
-                        <a href="mailto:randikaudaynga90@gmail.com"><i class="bi bi-envelope"></i></a>
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-card text-center">
+                        <img src="assets/img/developers/DilminiAnjalika.jpg" alt="">
+                        <h5 class="fw-bold">Dilmini Anjalika</h5>
+                        <p><b>UI Designer</b><br>Quality Assurance</p>
+                        <div class="team-icons">
+                            <!-- <a href="#"><i class="bi bi-globe"></i></a> -->
+                            <a href="https://github.com/Dil-2"><i class="bi bi-github"></i></a>
+                            <a href="www.linkedin.com/in/dilmini-anjalika-089305364"><i class="bi bi-linkedin"></i></a>
+                            <!-- <a href="#"><i class="bi bi-facebook"></i></a> -->
+                            <a href="Mailto:dilinianjalika076@gmail.com"><i class="bi bi-envelope"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="team-card text-center">
-                    <img src="assets/img/developers/DilminiAnjalika.jpg" alt="">
-                    <h5 class="fw-bold">Dilmini Anjalika</h5>
-                    <p><b>UI Designer</b><br>Quality Assurance</p>
-                    <div class="team-icons">
-                        <!-- <a href="#"><i class="bi bi-globe"></i></a> -->
-                        <a href="https://github.com/Dil-2"><i class="bi bi-github"></i></a>
-                        <a href="www.linkedin.com/in/dilmini-anjalika-089305364"><i class="bi bi-linkedin"></i></a>
-                        <!-- <a href="#"><i class="bi bi-facebook"></i></a> -->
-                        <a href="Mailto:dilinianjalika076@gmail.com"><i class="bi bi-envelope"></i></a>
-                    </div>
-                </div>
-            </div>
+            <!-- </div> -->
           <!--   <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
                     <img src="" alt="John Doe">
