--- a/developers.html
+++ b/developers.html
@@ -392,7 +392,7 @@
                                 <a href="https://propix.work.gd/" target="_blank" aria-label="Website"><i class="bi bi-globe"></i></a>
                                 <a href="https://github.com/propixlk" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
                                 <a href="https://www.linkedin.com/in/lahiru-sathsara" target="_blank" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
-                                <a href="https://www.facebook.com/share/16muPmLM6q/" target="_blank" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                                <!--<a href="#" target="_blank" aria-label="Facebook"><i class="bi bi-facebook"></i></a>-->
                                 <a href="mailto:lwijayamal2@gmail.com" aria-label="Email"><i class="bi bi-envelope"></i></a>
                             </div>
                         </div>
