--- a/developers.html
+++ b/developers.html
@@ -298,7 +298,7 @@
                         <p class="dev-card__role">Frontend Developer </p>
                         <p class="dev-card__secondary-role"><br>System Administrator</p>
                         <div class="dev-card__socials">
-                            <!--<a href="#"><i class="bi bi-globe"></i></a> -->
+                            <a href="https://janidu157.github.io/PortfolioJanidu/"><i class="bi bi-globe"></i></a>
                             <a href="https://github.com/janidu157"><i class="bi bi-github"></i></a>
                             <a href="https://www.linkedin.com/in/janidu-senarathna"><i class="bi bi-linkedin"></i></a>
                             <a href="https://www.facebook.com/share/1HUu33UpcL/"><i class="bi bi-facebook"></i></a>
