--- a/members.html
+++ b/members.html
@@ -232,9 +232,9 @@
                 <!-- member 1 -->
                 <div class="col-md-6 col-lg-3">
                     <div class="speaker-card ">
-                        <img src="https://placehold.co/400x300" class="img-fluid">
+                        <img src="assets\img\Org\ASP_2024_079 - Randika Subash.png" class="img-fluid">
                         <div class="p-4">
-                            <h5>Sarah Johnson</h5>
+                            <h5>Randika Udayanga</h5>
                             <p class="text-primary mb-1">Event Cordinator</p>
                             
                             <div class="d-flex">
