--- a/members.html
+++ b/members.html
@@ -249,10 +249,10 @@
                 <!-- member 2 -->
                 <div class="col-md-6 col-lg-3">
                     <div class="speaker-card ">
-                        <img src="https://placehold.co/400x300" class="img-fluid">
+                        <img src="assets\img\Org\ICT_2024_130 - Pamodha Vikum.png" class="img-fluid">
                         <div class="p-4">
-                            <h5>Michael Rodriguez</h5>
-                            <p class="text-primary mb-1">Technical Head</p>
+                            <h5>Pramodha Vikum</h5>
+                            <p class="text-primary mb-1">Assistant Event Coordinator</p>
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -265,10 +265,10 @@
                 <!-- member 3 -->
                 <div class="col-md-6 col-lg-3">
                     <div class="speaker-card">
-                        <img src="https://placehold.co/400x300" alt="Diverse woman in creative attire presenting data visualization on a screen" class="img-fluid">
+                        <img src="assets\img\Org\HPT_2024_046 - Navod Sankalpa.png" alt="Diverse woman in creative attire presenting data visualization on a screen" class="img-fluid">
                         <div class="p-4">
-                            <h5>Priya Patel</h5>
-                            <p class="text-primary mb-1">Creative Director</p>
+                            <h5>Navod Sankalpa</h5>
+                            <p class="text-primary mb-1">Finance & Budget Coordinator</p>
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -281,10 +281,10 @@
                 <!-- member 4 -->
                 <div class="col-md-6 col-lg-3">
                     <div class="speaker-card ">
-                        <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                        <img src="assets\img\Org\ASP_2024_065 - Janidu Senarathna.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                         <div class="p-4">
-                            <h5>David Kim</h5>
-                            <p class="text-primary mb-1">Vice President</p>
+                            <h5>Janidu Senarathna</h5>
+                            <p class="text-primary mb-1">Technical Team Lead</p>
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -296,10 +296,10 @@
                 <!-- member 5 -->
                  <div class="col-md-6 col-lg-3">
                     <div class="speaker-card ">
-                        <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                        <img src="assets\img\Org\ASP_2024_100 - Sanjana Jayarathna.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                         <div class="p-4">
-                            <h5>David Kim</h5>
-                            <p class="text-primary mb-1">Vice President</p>
+                            <h5>Sanjana Jayarathne</h5>
+                            <p class="text-primary mb-1">Creative & Media Team Lead</p>
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -311,10 +311,10 @@
                 <!-- member 6 -->
                 <div class="col-md-6 col-lg-3">
                     <div class="speaker-card ">
-                        <img src="https://placehold.co/400x300" alt="" class="img-fluid">
+                        <img src="assets\img\Org\ASP_2024_059 - Chathura Ravihansa.png" alt="" class="img-fluid">
                         <div class="p-4">   
-                            <h5>Emily Chen</h5>
-                            <p class="text-primary mb-1">Marketing Specialist</p>
+                            <h5>Chathura Jayamal</h5>
+                            <p class="text-primary mb-1">Promotion, PR & Social Media Lead</p>
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
