--- a/members.html
+++ b/members.html
@@ -231,7 +231,7 @@
             <div class="row g-4">
                 <div class="row justify-content-center">
                     <!-- member 1 -->
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-3">
                         <div class="speaker-card ">
                             <img src="assets\img\Org\ASP_2024_079 - Randika Subash.png" class="img-fluid">
                             <div class="p-4">
@@ -246,11 +246,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                <!-- </div>
                 
-                <div class="row justify-content-center">
+                <div class="row justify-content-center"> -->
                     <!-- member 2 -->
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-3">
                         <div class="speaker-card ">
                             <img src="assets\img\Org\ICT_2024_130 - Pamodha Vikum.png" class="img-fluid">
                             <div class="p-4">
@@ -266,7 +266,7 @@
                     </div>
                     
                     <!-- member 3 -->
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-3">
                         <div class="speaker-card">
                             <img src="assets\img\Org\HPT_2024_046 - Navod Sankalpa.png" alt="Diverse woman in creative attire presenting data visualization on a screen" class="img-fluid">
                             <div class="p-4">
