add Samudi Abeywickrama to the developer team and update grid layout

--- a/developers.html
+++ b/developers.html
@@ -137,7 +137,7 @@
         
         .team-grid {
             display: grid;
-            grid-template-columns: repeat(5, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
             justify-content: center;
         }
@@ -380,8 +380,8 @@
                             <div class="dev-card__socials">
                                 <a href="https://janidu157.github.io/PortfolioJanidu/"><i class="bi bi-globe"></i></a>
                                 <a href="https://github.com/janidu157" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
-                                <a href="https://www.facebook.com/share/1HUu33UpcL/" target="_blank" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
                                 <a href="https://www.linkedin.com/in/janidu-senarathna"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://www.facebook.com/share/1HUu33UpcL/" target="_blank" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
                                 <a href="mailto:janidusenarathna157@gmail.com" aria-label="Email"><i class="bi bi-envelope"></i></a>
                             </div>
                         </div>
@@ -413,6 +413,21 @@
                                 <a href="https://github.com/Dil-2" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
                                 <a href="https://www.linkedin.com/in/dilmini-anjalika-089305364" target="_blank" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
                                 <a href="mailto:dilinianjalika076@gmail.com" aria-label="Email"><i class="bi bi-envelope"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dev-card">
+                        <div class="dev-card-content">
+                            <img src="assets/img/developers/6.jpeg" alt="Randika Subash" class="dev-card__image">
+                            <h3 class="dev-card__name">Samudi Abeywickrama</h3>
+                            <p class="dev-card__role">UI Designer</p>
+                            <p class="dev-card__secondary-role">Quality Assurance</p>
+                            <div class="dev-card__socials">
+                                <!--<a href="https://networkchukka.github.io/site/" target="_blank" aria-label="Website"><i class="bi bi-globe"></i></a>-->
+                                <a href="https://github.com/Samudisavindya" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
+                                <!--<a href="https://www.linkedin.com/in/randikasubash" target="_blank" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://www.facebook.com/randikasubash1015" target="_blank" aria-label="Facebook"><i class="bi bi-facebook"></i></a>-->
+                                <a href="mailto:samudiabeywickrama@gmail.com" aria-label="Email"><i class="bi bi-envelope"></i></a>
                             </div>
                         </div>
                     </div>
