--- a/ticket.html
+++ b/ticket.html
@@ -135,26 +135,26 @@
             <div class="bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg">
                 <h2 class="text-3xl font-bold text-center mb-2">Get Your Event Ticket</h2>
                 <p class="text-center text-gray-300 mb-6">Enter your details to generate your entry pass.</p>
-                <form id="ticket-form" class="space-y-6">
-                    <div>
-                        <label for="regNumber" class="block mb-2 text-sm font-medium text-gray-200">Registration Number</label>
-                        <input type="text" id="regNumber" class="form-input w-full px-4 py-3 rounded-lg text-white" placeholder="e.g., ASP/2024/000" required>
-                    </div>
-                    <div>
-                        <label for="fullName" class="block mb-2 text-sm font-medium text-gray-200">Full Name</label>
-                        <input type="text" id="fullName" class="form-input w-full px-4 py-3 rounded-lg text-white" placeholder="Enter your full name" required>
-                    </div>
-                    <div>
-                        <label for="email" class="block mb-2 text-sm font-medium text-gray-200">Email Address</label>
-                        <input type="email" id="email" class="form-input w-full px-4 py-3 rounded-lg text-white" placeholder="your.email@example.com" required>
-                    </div>
-                    <button type="submit" class="w-full btn-brand text-white font-bold py-3 px-5 rounded-lg text-lg">
-                        <i class="bi bi-ticket-detailed-fill mr-2"></i> Get Ticket
-                    </button>
-                </form>
+                <form id="ticket-form" class="space-y-6" action="https://script.google.com/macros/s/AKfycbx4B8tePJD-8xkE8C5l_iA5l_xzlYTCXHURABeIfwpPxJujh0JzgW-D4NQSrxjR9JXE/exec" method="POST">
+    <div>
+        <label for="regNumber" class="block mb-2 text-sm font-medium text-gray-200">Registration Number</label>
+        <input type="text" id="regNumber" name="regNumber" class="form-input w-full px-4 py-3 rounded-lg text-white" placeholder="e.g., ASP/2024/000" required>
+    </div>
+    <div>
+        <label for="fullName" class="block mb-2 text-sm font-medium text-gray-200">Full Name</label>
+        <input type="text" id="fullName" name="fullName" class="form-input w-full px-4 py-3 rounded-lg text-white" placeholder="Enter your full name" required>
+    </div>
+    <div>
+        <label for="email" class="block mb-2 text-sm font-medium text-gray-200">Email Address</label>
+        <input type="email" id="email" name="email" class="form-input w-full px-4 py-3 rounded-lg text-white" placeholder="your.email@example.com" required>
+    </div>
+    <button type="submit" class="w-full btn-brand text-white font-bold py-3 px-5 rounded-lg text-lg">
+        <i class="bi bi-ticket-detailed-fill mr-2"></i> Get Ticket
+    </button>
+</form>
             </div>
         </div>
-
+<div><p>You will receive a certificate of participation via email.</p></div>
         <div id="ticket-container" class="w-full max-w-lg mx-auto hidden">
              <div id="ticket" class="ticket-gradient text-white rounded-2xl shadow-2xl overflow-hidden">
                 <div class="p-6 md:p-8">
