Change title of chathura

--- a/members.html
+++ b/members.html
@@ -313,7 +313,6 @@
                             <div class="p-4">
                                 <h5>Janidu Senarathna</h5>
                                 <p class="text-primary mb-1">Technical Team Lead</p>
-                                <br>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -329,7 +328,6 @@
                             <div class="p-4">
                                 <h5>Sanjana Jayarathne</h5>
                                 <p class="text-primary mb-1">Creative & Media Team Lead</p>
-                                <br>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -344,7 +342,7 @@
                             <img src="assets\img\Org\ASP_2024_059 - Chathura Ravihansa.png" alt="" class="img-fluid">
                             <div class="p-4">   
                                 <h5>Chathura Jayamal</h5>
-                                <p class="text-primary mb-1">Promotion, PR & Social Media Lead</p>
+                                <p class="text-primary mb-1">PR & Social Media Lead</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
