--- a/ticket.html
+++ b/ticket.html
@@ -154,7 +154,7 @@
 </form>
             </div>
         </div>
-<div><p>You will receive a certificate of participation via email.</p></div>
+<!--<div><p>You will receive a certificate of participation via email.</p></div>-->
         <div id="ticket-container" class="w-full max-w-lg mx-auto hidden">
              <div id="ticket" class="ticket-gradient text-white rounded-2xl shadow-2xl overflow-hidden">
                 <div class="p-6 md:p-8">
