--- a/about.html
+++ b/about.html
@@ -578,9 +578,7 @@
     <section class="py-5 ">
         <h1 class="text-center section-title">Event Schedule</h1>
 <div class="d-flex justify-content-center my-4">
-  <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#exampleModalLong">
-    View Event Schedule
-  </button>
+  <a href="members.html" class="btn btn-outline-warning btn-lg rounded-pill px-4">View Full Committee</a>
 </div>
 
 <!-- Modal -->
