Add oraganizing commitee member details

--- a/members.html
+++ b/members.html
@@ -359,8 +359,8 @@
                         <div class="speaker-card ">
                             <img src="assets\img\Org\ICT_2024_025 - Nivisadi De Silva.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <h5>Nivisadi<br> De Silva</h5>
+                                <p class="text-primary mb-1">Documentation Lead</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -372,10 +372,10 @@
                     <!-- member 8 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\ICT_2024_025 - Nivisadi De Silva.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\ASB_2024_111 - Heshani Sharala.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <h5>Heshani <br> Sharala</h5>
+                                <p class="text-primary mb-1">Content & Script Lead</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -387,10 +387,10 @@
                     <!-- member 9 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\ICT_2024_025 - Nivisadi De Silva.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\ASP_2024_071 - Ahinsa Madushika.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <h5>Ahinsa <br> Madushika</h5>
+                                <p class="text-primary mb-1">Dancing Coordinator</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -402,10 +402,10 @@
                     <!-- member 10 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\ICT_2024_025 - Nivisadi De Silva.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\ASP_2024_016 - Shenal Chanaka.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <h5>Shenal <br>Chanaka</h5>
+                                <p class="text-primary mb-1">Singing Coordinator</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -417,10 +417,10 @@
                     <!-- member 11 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\ICT_2024_025 - Nivisadi De Silva.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\HPT_2024_041 - Dilhara Sewwandi.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <h5>Dilhara <br> Sewwandi</h5>
+                                <p class="text-primary mb-1">Art & Craft Coordinator</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -434,10 +434,10 @@
                     <!-- member 12 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\HPT_2024_041 - Dilhara Sewwandi.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\ICT_2024_060 - Akindu Dulwan.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <h5>Akindu <br> Dulwan</h5>
+                                <p class="text-primary mb-1">Drama Coordinator</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -449,10 +449,10 @@
                     <!-- member 13 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\HPT_2024_041 - Dilhara Sewwandi.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="assets\img\Org\ASB_2024_093 - Gayangi Kaveesha.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>David Kim</h5>
-                                <p class="text-primary mb-1">Vice President</p>
+                                <h5>Gayangi <br> Kaveesha</h5>
+                                <p class="text-primary mb-1">Speaking & Announcing Coordinator</p>
                                 <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -464,7 +464,7 @@
                     <!-- member 14 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\HPT_2024_041 - Dilhara Sewwandi.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>David Kim</h5>
                                 <p class="text-primary mb-1">Vice President</p>
@@ -479,7 +479,7 @@
                     <!-- member 15 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\HPT_2024_041 - Dilhara Sewwandi.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>David Kim</h5>
                                 <p class="text-primary mb-1">Vice President</p>
@@ -494,7 +494,7 @@
                     <!-- member 16 -->
                     <div class="col-md-6 col-lg-2">
                         <div class="speaker-card ">
-                            <img src="assets\img\Org\HPT_2024_041 - Dilhara Sewwandi.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
+                            <img src="https://placehold.co/400x300" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
                                 <h5>David Kim</h5>
                                 <p class="text-primary mb-1">Vice President</p>
