--- a/about.html
+++ b/about.html
@@ -578,7 +578,9 @@
     <section class="py-5 ">
         <h1 class="text-center section-title">Event Schedule</h1>
 <div class="d-flex justify-content-center my-4">
-  <a href="members.html" class="btn btn-outline-warning btn-lg rounded-pill px-4">View Event Schedule</a>
+  <button type="button" class="btn btn-outline-warning btn-lg rounded-pill" data-bs-toggle="modal" data-bs-target="#exampleModalLong">
+    View Event Schedule
+  </button>
 </div>
 
 <!-- Modal -->
