--- a/members.html
+++ b/members.html
@@ -225,7 +225,9 @@
             }
 
         }
-
+.container{
+    padding-right: 0px;
+}
        </style> 
 </head>
 <body class="animated-gradient text-white overflow-x-hidden">
