--- a/about.html
+++ b/about.html
@@ -553,7 +553,7 @@
             <h1 class="text-center section-title">About The Event</h1>
             <div class="row g-4 align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <img src="assets/img/800600post for website clr.png" height="600" width="800"
+                    <img src="assets/img/gptimg600800.jpg" height="600" width="800"
                         alt="Modern conference center" class="img-fluid rounded shadow-lg">
                 </div>
                 <div class="col-lg-6 col-md-12">
