--- a/members.html
+++ b/members.html
@@ -236,7 +236,7 @@
         <img src="assets/img/logo.png" alt="Loading Logo" class="loader-logo">
     </div>
 
-    <header class="site-header">
+    <!-- <header class="site-header">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3">
                 <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
@@ -251,7 +251,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
         <section id="speakers" class="py-5">
         <div class="container">
             <h2 class="text-center section-title">Organizing committee</h2>            
