--- a/members.html
+++ b/members.html
@@ -245,9 +245,7 @@
             <nav>
                 <ul class="flex items-center space-x-8">
                     <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
-                    <li><a href="about.html" class="nav-link font-semibold text-orange-400">About</a></li>
-                    <li><a href="ticket.html" class="nav-link font-semibold">Get Ticket</a></li>
-                    <li><a href="candle.html" class="nav-link font-semibold">Candle</a></li>
+                    <li><a href="about.html" class="nav-link font-semibold">About</a></li>
                 </ul>
             </nav>
         </div>
