--- a/ticket.html
+++ b/ticket.html
@@ -151,7 +151,7 @@
     <button type="submit" class="w-full btn-brand text-white font-bold py-3 px-5 rounded-lg text-lg">
         <i class="bi bi-ticket-detailed-fill mr-2"></i> Get Ticket
     </button>
-</form><div><p style="font-style: italic;"> <br>You will receive a Certificate of participation via email.</p></div>
+</form><p style="font-style:inherit"> <br>You'll receive an "e-certificate" of participation by Email.</p>
             </div>
         </div>
 
