--- a/about.html
+++ b/about.html
@@ -510,22 +510,29 @@
         <img src="assets/img/logo.png" alt="Loading Logo" class="loader-logo">
     </div>
 
+    
     <header class="site-header">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="flex items-center gap-3">
-                <img src="assets/img/logo2.jpg"
-                    class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
-                <span class="font-bold text-xl hidden sm:block">INSPIRA'25</span>
-            </a>
-            <nav>
-                <ul class="flex items-center space-x-8">
-                    <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
-                    <li><a href="about.html" class="nav-link font-semibold text-orange-400">About</a></li>
-                    <li><a href="ticket.html" class="nav-link font-semibold">Get Ticket</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+        <!-- Logo -->
+        <a href="index.html" class="flex items-center gap-3">
+            <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
+            <span class="font-bold text-xl hidden sm:block">INSPIRA '25</span>
+        </a>
+
+        <!-- Hamburger button for small screens -->
+        <button id="nav-toggle" class="sm:hidden text-white focus:outline-none">
+            <i class="bi bi-list text-2xl"></i>
+        </button>
+
+        <!-- Navigation -->
+        <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
+            <a href="index.html" class="nav-link font-semibold text-orange-400">Home</a>
+            <a href="about.html" class="nav-link font-semibold">About</a>
+            <a href="ticket.html" class="nav-link font-semibold">Get Ticket</a>
+            <a href="#" class="nav-link font-semibold">Schedule</a>
+        </nav>
+    </div>
+</header>
 
     <section id="home" class="hero pt-20">
         <div class="container pt-5">
@@ -902,6 +909,20 @@
     <canvas id="interactiveCanvas" class="fixed top-0 left-0 w-full h-full pointer-events-none z-0"></canvas>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+    // Toggle mobile menu
+    const navToggle = document.getElementById('nav-toggle');
+    const navMenu = document.getElementById('nav-menu');
+
+    navToggle.addEventListener('click', () => {
+        navMenu.classList.toggle('hidden');
+        navMenu.classList.toggle('flex');
+        navMenu.classList.toggle('flex-col');
+        navMenu.classList.toggle('space-y-4');
+        navMenu.classList.toggle('space-x-0');
+        navMenu.classList.toggle('mt-4');
+    });
+</script>
     <script>
         // ✅ Swiper initialization with autoplay
         const swiper = new Swiper('.slider-wrapper', {
