--- a/testnav.html
+++ b/testnav.html
@@ -187,33 +187,75 @@
             -webkit-backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
+/* Glassmorphism Navbar */
+.navbar-glass {
+    background: rgba(255, 255, 255, 0.08); /* Transparent white */
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    border-radius: 20px;
+    padding: 0.5rem 1rem;
+    transition: all 0.3s ease;
+}
+/* Glassmorphism Navbar */
+.navbar-glass {
+    background: rgba(84, 28, 28, 0.3); /* Semi-transparent dark brown */
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    transition: all 0.3s ease;
+    padding: 0.5rem 1rem;
+}
 
-        .nav-link {
-            position: relative;
-            transition: color 0.3s ease;
-        }
+.navbar-glass:hover {
+    background: rgba(84, 28, 28, 0.5);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
+}
 
-        .nav-link:hover {
-            color: #F28C1A;
-            /* Accent color on hover */
-        }
+/* Navbar links */
+.navbar-glass .nav-link {
+    color: #fff !important;
+    font-weight: 500;
+    position: relative;
+    transition: color 0.3s ease;
+}
 
-        .nav-link::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            display: block;
-            margin-top: 5px;
-            right: 0;
-            background: #F28C1A;
-            transition: width 0.3s ease;
-        }
+.navbar-glass .nav-link:hover {
+    color: #F28C1A !important;
+}
 
-        .nav-link:hover::after {
-            width: 100%;
-            left: 0;
-        }
+.navbar-glass .nav-link::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    display: block;
+    margin-top: 5px;
+    right: 0;
+    background: #F28C1A;
+    transition: width 0.3s ease;
+}
+
+.navbar-glass .nav-link:hover::after {
+    width: 100%;
+    left: 0;
+}
+
+/* Hamburger icon */
+.navbar-toggler {
+    border: none;
+}
+
+.navbar-toggler-icon {
+    filter: invert(1); /* make it white */
+}
+
+/* Navbar scroll effect */
+.navbar-scrolled {
+    background: rgba(84, 28, 28, 0.7);
+    backdrop-filter: blur(20px);
+}
 
         /* Footer Styles */
         .site-footer {
@@ -258,8 +300,7 @@
     <div id="loader" class="animated-gradient">
         <img src="assets/img/logo.png" alt="Loading Logo" class="loader-logo">
     </div>
-
-    <header class="site-header">
+<header class="site-header">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
         <!-- Logo -->
         <a href="index.html" class="flex items-center gap-3">
@@ -281,6 +322,10 @@
         </nav>
     </div>
 </header>
+
+
+
+
 
     <div id="page-content" class="min-h-screen w-full flex flex-col items-center justify-center p-4 sm:p-6 lg:p-8">
 
@@ -384,8 +429,7 @@
         navMenu.classList.toggle('mt-4');
     });
 </script>
-
-    <script>
+<script>
         // --- SCRIPT FOR LOADER ---
         window.addEventListener('load', () => {
             const loader = document.getElementById('loader');
@@ -510,6 +554,8 @@
             );
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
