--- a/testnav.html
+++ b/testnav.html
@@ -300,27 +300,42 @@
     <div id="loader" class="animated-gradient">
         <img src="assets/img/logo.png" alt="Loading Logo" class="loader-logo">
     </div>
-<header class="site-header">
-    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <!-- Logo -->
-        <a href="index.html" class="flex items-center gap-3">
-            <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
-            <span class="font-bold text-xl hidden sm:block">INSPIRA '25</span>
-        </a>
+<header class="site-header bg-gray-800/50 backdrop-blur-md border-b border-white/10">
+  <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+    <!-- Logo -->
+    <a href="index.html" class="flex items-center gap-3">
+      <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
+      <span class="font-bold text-xl hidden sm:block text-white">INSPIRA '25</span>
+    </a>
 
-        <!-- Hamburger button for small screens -->
-        <button id="nav-toggle" class="sm:hidden text-white focus:outline-none">
-            <i class="bi bi-list text-2xl"></i>
-        </button>
+    <!-- Hamburger / Close Button for mobile -->
+    <button id="nav-toggle" class="sm:hidden text-white focus:outline-none">
+      <!-- Hamburger icon -->
+      <svg id="hamburger" class="h-8 w-8 block" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
+      </svg>
+      <!-- Close icon -->
+      <svg id="close" class="h-8 w-8 hidden" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+      </svg>
+    </button>
 
-        <!-- Navigation -->
-        <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
-            <a href="index.html" class="nav-link font-semibold text-orange-400">Home</a>
-            <a href="about.html" class="nav-link font-semibold">About</a>
-            <a href="ticket.html" class="nav-link font-semibold">Get Ticket</a>
-            <a href="#" class="nav-link font-semibold">Schedule</a>
-        </nav>
-    </div>
+    <!-- Desktop Navigation -->
+    <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
+      <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
+      <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
+      <a href="ticket.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+      <a href="#" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+    </nav>
+  </div>
+
+  <!-- Mobile Navigation -->
+  <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 bg-gray-800/50 backdrop-blur-md border-t border-white/10 rounded-b-lg">
+    <a href="index.html" class="block font-semibold text-orange-400 hover:text-white transition">Home</a>
+    <a href="about.html" class="block font-semibold text-white hover:text-orange-400 transition">About</a>
+    <a href="ticket.html" class="block font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+    <a href="#" class="block font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+  </nav>
 </header>
 
 
